# xpans_violet

./: Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: build-and-test.yml
extensions/violet_audio_buffer/: Cargo.toml
extensions/violet_audio_buffer/src/: lib.rs
extensions/violet_audio_decoder/: Cargo.toml  README.md
extensions/violet_audio_decoder/src/: lib.rs
extensions/violet_audio_encoder/: Cargo.toml  README.md
extensions/violet_audio_encoder/src/: lib.rs
extensions/violet_config/: Cargo.toml  README.md
extensions/violet_config/src/: headphones.rs  lib.rs  mono.rs  stereo.rs
extensions/violet_interpolation/: Cargo.toml  README.md
extensions/violet_interpolation/src/: lagrange.rs  lib.rs  linear.rs  sinc.rs
extensions/violet_spatial_decoder/: Cargo.toml  README.md
extensions/violet_spatial_decoder/src/: lib.rs
violet_core/: Cargo.toml  README.md
violet_core/src/: audio_input.rs  audio_input_socket.rs  audio_output.rs  audio_output_socket.rs  builder.rs  connector.rs  lib.rs  renderer.rs  sample_processor.rs  source.rs  source_interpreter.rs  spatial_input.rs
xpans_violet/: Cargo.toml
xpans_violet/src/: lib.rs
