[package]
name = "violet_audio_buffer"
version = "0.1.0"
edition = "2024"
description = "Adds an audio input buffer to xpans Violet"
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://xpans.audio"
repository = "https://github.com/xpans-audio/violet.git"
authors = ["Ben Seigler"]

[dependencies]
wreath = "0.1.0"
violet_core = { version = "0.1.0", path = "../../violet_core" }
