[package]
name = "violet_audio_decoder"
version = "0.1.0"
edition = "2024"
description = "Adds an audio decoder input to xpans Violet"
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://xpans.audio"
repository = "https://github.com/xpans-audio/xpans_violet.git"
authors = ["Ben Seigler"]

[dependencies]
violet_core = { version = "0.1.0", path = "../../violet_core" }
symphonia = { version = "0.5.5" }
wreath = "0.1.0"
