[package]
name = "violet_audio_encoder"
version = "0.1.0"
edition = "2024"
description = "Adds an audio encoder output to xpans Violet"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xpans-audio/xpans_violet.git"
authors = ["Ben Seigler"]

[dependencies]
violet_core = { version = "0.1.0", path = "../../violet_core" }
hound = { version = "3.5.1" }
wreath = "0.1.0"
