[package]
name = "violet_interpolation"
version = "0.1.0"
edition = "2024"
description = "Adds audio sample interpolation to xpans Violet"
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://xpans.audio"
repository = "https://github.com/xpans-audio/xpans_violet.git"
authors = ["Ben Seigler"]

[dependencies]
violet_core = { version = "0.1.0", path = "../../violet_core" }
num = "0.4.3"
